{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 51,
  "lineage": "8dbf56fd-36c6-8464-b8d5-293379c530f3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eric-lambda-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:security-group/sg-0b5683f8ec96b6c5e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0b5683f8ec96b6c5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "27.122.140.10/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eric-lambda-sg",
            "name_prefix": "",
            "owner_id": "151564769076",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0020aed1615bde806"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eric-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eric-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:security-group/sg-0e749d5e38ef72ee3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e749d5e38ef72ee3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b5683f8ec96b6c5e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "eric-rds-sg",
            "name_prefix": "",
            "owner_id": "151564769076",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0020aed1615bde806"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eric-lambda-sg",
            "aws_vpc.eric-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eric-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:subnet/subnet-0a9e796c36f1f9a4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9e796c36f1f9a4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "151564769076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eric-subnet"
            },
            "tags_all": {
              "Name": "eric-subnet"
            },
            "vpc_id": "vpc-0020aed1615bde806"
          },
          "dependencies": [
            "aws_vpc.eric-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eric-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:subnet/subnet-031c31fc088df04b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031c31fc088df04b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "151564769076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eric-subnet2"
            },
            "tags_all": {
              "Name": "eric-subnet2"
            },
            "vpc_id": "vpc-0020aed1615bde806"
          },
          "dependencies": [
            "aws_vpc.eric-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eric-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:vpc/vpc-0020aed1615bde806",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-03277368bc47ea50c",
            "default_route_table_id": "rtb-07b8d1148900206bc",
            "default_security_group_id": "sg-04a5f44640370e371",
            "dhcp_options_id": "dopt-c9ec46a2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0020aed1615bde806",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b8d1148900206bc",
            "owner_id": "151564769076",
            "tags": {
              "Name": "eric-vpc2"
            },
            "tags_all": {
              "Name": "eric-vpc2"
            }
          }
        }
      ]
    }
  ]
}